test/pass/54-voidptr_nocast.perk
import "malloc.h"
import "stdio.h"

fun main () : void {
    let x : int* = malloc (100);
    printf("ha funzionated");
}