test/fail/08-missing_closing_quotes.perk
fun main(): int {
    let s: string = "hello world;
    return 0;
}